--- a/ORM.Sample.Console/App.config
+++ b/ORM.Sample.Console/App.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+      <section name="main" type="ORM.Sample.Core.Cfg.MainSettingsSection, ORM.Sample.Core"/>
+    </configSections>
+    <main connection="1" type="2"/>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
