--- a/ORM.Sample.Core/ORM.Sample.Core.csproj
+++ b/ORM.Sample.Core/ORM.Sample.Core.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B6597FBA-37FB-4B07-BF93-F35E61131856}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{B97DD7D4-7B16-4712-8814-2C6E395F6667}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ORM.Sample.Console</RootNamespace>
-    <AssemblyName>ORM.Sample.Console</AssemblyName>
+    <RootNamespace>ORM.Sample.Core</RootNamespace>
+    <AssemblyName>ORM.Sample.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -36,7 +33,6 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,25 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Cfg\MainSettingsSection.cs" />
+    <Compile Include="Db\DbProvider.cs" />
+    <Compile Include="Db\IDbProvider.cs" />
+    <Compile Include="Orm\IOrmConfigurator.cs" />
+    <Compile Include="Orm\IOrmSession.cs" />
+    <Compile Include="Orm\IOrmSessionFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ORM.Sample.Domain\ORM.Sample.Domain.csproj">
-      <Project>{6f11202e-b1f8-4ac7-90b6-43fbed8df79b}</Project>
-      <Name>ORM.Sample.Domain</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ORM.Sample.Core\ORM.Sample.Core.csproj">
-      <Project>{b97dd7d4-7b16-4712-8814-2c6e395f6667}</Project>
-      <Name>ORM.Sample.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ORM.Sample.NH\ORM.Sample.NH.csproj">
-      <Project>{c90906f2-6331-45be-8847-b7aab1478dc4}</Project>
-      <Name>ORM.Sample.NH</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
