--- a/Sources/ORM.Sample.Console/App.config
+++ b/Sources/ORM.Sample.Console/App.config
@@ -3,7 +3,7 @@
     <configSections>
       <section name="main" type="ORM.Sample.Core.Cfg.MainSettingsSection, ORM.Sample.Core"/>
     </configSections>
-    <main connection="1" type="2"/>
+    <main connection="1" orm="ORM.Sample.NH.NhProvider, ORM.Sample.NH" db="ORM.Sample.MSSQL.MssqlProvider, ORM.Sample.MSSQL" />
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
