--- a/Sources/ORM.Sample.Console/ORM.Sample.Console.csproj
+++ b/Sources/ORM.Sample.Console/ORM.Sample.Console.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B97DD7D4-7B16-4712-8814-2C6E395F6667}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{B6597FBA-37FB-4B07-BF93-F35E61131856}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ORM.Sample.Core</RootNamespace>
-    <AssemblyName>ORM.Sample.Core</AssemblyName>
+    <RootNamespace>ORM.Sample.Console</RootNamespace>
+    <AssemblyName>ORM.Sample.Console</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,9 +33,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=4.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Autofac.4.5.0\lib\net45\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,13 +49,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cfg\MainSettingsSection.cs" />
-    <Compile Include="Db\DbProvider.cs" />
-    <Compile Include="Db\IDbProvider.cs" />
-    <Compile Include="Orm\IOrmConfigurator.cs" />
-    <Compile Include="Orm\IOrmSession.cs" />
-    <Compile Include="Orm\IOrmSessionFactory.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ORM.Sample.Domain\ORM.Sample.Domain.csproj">
+      <Project>{6f11202e-b1f8-4ac7-90b6-43fbed8df79b}</Project>
+      <Name>ORM.Sample.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ORM.Sample.Core\ORM.Sample.Core.csproj">
+      <Project>{b97dd7d4-7b16-4712-8814-2c6e395f6667}</Project>
+      <Name>ORM.Sample.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ORM.Sample.MSSQL\ORM.Sample.MSSQL.csproj">
+      <Project>{d02b89cd-8952-44b2-9f10-a1c173f945fd}</Project>
+      <Name>ORM.Sample.MSSQL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ORM.Sample.NH\ORM.Sample.NH.csproj">
+      <Project>{c90906f2-6331-45be-8847-b7aab1478dc4}</Project>
+      <Name>ORM.Sample.NH</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
