--- a/Sources/ORM.Sample.Core/ORM.Sample.Core.csproj
+++ b/Sources/ORM.Sample.Core/ORM.Sample.Core.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C90906F2-6331-45BE-8847-B7AAB1478DC4}</ProjectGuid>
+    <ProjectGuid>{B97DD7D4-7B16-4712-8814-2C6E395F6667}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ORM.Sample.NH</RootNamespace>
-    <AssemblyName>ORM.Sample.NH</AssemblyName>
+    <RootNamespace>ORM.Sample.Core</RootNamespace>
+    <AssemblyName>ORM.Sample.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,15 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Iesi.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <HintPath>..\packages\Iesi.Collections.4.0.0.4000\lib\net40\Iesi.Collections.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="NHibernate, Version=4.1.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <HintPath>..\packages\NHibernate.4.1.1.4000\lib\net40\NHibernate.dll</HintPath>
+    <Reference Include="Autofac, Version=4.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Autofac.4.5.0\lib\net45\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -48,34 +45,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NhConfigurator.cs" />
-    <Compile Include="NhSession.cs" />
-    <Compile Include="NhSessionFactory.cs" />
+    <Compile Include="Cfg\MainSettingsSection.cs" />
+    <Compile Include="Db\DbProvider.cs" />
+    <Compile Include="Db\IDbProvider.cs" />
+    <Compile Include="Orm\IOrmConfigurator.cs" />
+    <Compile Include="Orm\IOrmSession.cs" />
+    <Compile Include="Orm\IOrmSessionFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Types\ImageUserType.cs" />
+    <Compile Include="Starter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Mappings\Attachment.hbm.xml" />
-    <None Include="Mappings\Blog.hbm.xml">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Mappings\Comment.hbm.xml" />
-    <None Include="Mappings\Post.hbm.xml" />
-    <EmbeddedResource Include="Mappings\User.hbm.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="hibernate.cfg.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ORM.Sample.Core\ORM.Sample.Core.csproj">
-      <Project>{b97dd7d4-7b16-4712-8814-2c6e395f6667}</Project>
-      <Name>ORM.Sample.Core</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
